@@ -1,23 +1,30 @@
 package com.test.qoldanqolga.security;
 
+import com.test.qoldanqolga.model.Role;
 import com.test.qoldanqolga.model.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class UserPrincipal implements UserDetails {
 
     private final String id;
     private final String email;
     private final String passwordHash;
+    private final Role role;
 
     public UserPrincipal(User user) {
         this.id = user.getId();
         this.email = user.getEmail();
         this.passwordHash = user.getPasswordHash();
+        this.role = user.getRole() != null ? user.getRole() : Role.USER;
+    }
+
+    public Role getRole() {
+        return role;
     }
 
     public String getId() {
@@ -40,7 +47,13 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        if (role == Role.ADMIN) {
+            authorities = List.of(
+                    new SimpleGrantedAuthority("ROLE_USER"),
+                    new SimpleGrantedAuthority("ROLE_ADMIN"));
+        }
+        return authorities;
     }
 
     @Override
